# OhjelmistoTuotantoRepositorio2

./: README.md  pyproject.toml
osa2/nhl-statistics-1/: .coverage  project-reader.code-workspace
osa2/nhl-statistics-1/src/: index.py
osa2/nhl-statistics-1/src/tests/: statistics_service_test.py
osa2/poetry-web/: oma_react_koodi.js  pyproject.toml
osa2/project-reader/: pyproject.toml
osa2/project-reader/src/: project.py  project_reader.py
osa3/hello-robot/: log.html  output.xml  report.html
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot
osa4/: retro.md
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
