[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Kisute <jenhok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
pytest = "^8.3.3"
cowsay = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
